# bambushot

./: .example_env  .gitignore  README.md  measure_plate.3mf  pyproject.toml
scripts/: fit.py  gcode_gen.py  plate.py  seg.py  shot.py  stream-cam.py  vqa.py
